# youtube-automation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_script.txt
src/youtube_automation/: __init__.py  characters.py  cli.py  config.py  ffmpeg.py  kie.py  models.py  pipeline.py  planner.py  reference_video.py  script_generator.py  styles.py  web.py
tests/: test_planner.py
