[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-automation"
version = "0.1.0"
description = "Create narrated YouTube videos from scripts using Kie API and ffmpeg."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.0.0",
  "fastapi>=0.115,<1",
  "openai>=1.99.0",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
  "yt-dlp>=2025.1.15",
]

[project.scripts]
youtube-automation = "youtube_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
